[gd_scene load_steps=22 format=3 uid="uid://bkibj8u0mie7y"]

[ext_resource type="Script" path="res://Test/test_forge.gd" id="1_kefk8"]
[ext_resource type="PackedScene" uid="uid://c5mjbsl4ik7j" path="res://Components/CrastingStations/Anvil.tscn" id="2_2clwy"]
[ext_resource type="PackedScene" uid="uid://yqlu0ag3fia0" path="res://Components/UI/equipment_distribution.tscn" id="2_6xpmr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_2w87d"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_yfkln"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_slgsw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="6_xcldi"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_lb24i"]
[ext_resource type="PackedScene" uid="uid://crmteu5r41k5y" path="res://Components/CrastingStations/waterpot.tscn" id="8_122nu"]
[ext_resource type="PackedScene" uid="uid://cl3tlfuhg5ij6" path="res://Components/table.tscn" id="8_dknt7"]
[ext_resource type="Script" path="res://Test/StateChartHandler.gd" id="8_jiarc"]
[ext_resource type="PackedScene" uid="uid://nweeuqqeqja1" path="res://Components/CrastingStations/furnace.tscn" id="9_2fqu1"]
[ext_resource type="PackedScene" uid="uid://b0njyc3rld62q" path="res://Components/ItemNodes/item_node.tscn" id="9_ld4ro"]
[ext_resource type="Resource" uid="uid://bum0ogbmj2a6h" path="res://Components/Items/ingot.tres" id="12_4tboe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cj68h"]
albedo_color = Color(0.45098, 0.45098, 0.45098, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_jkj0f"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_bc0ho"]
radius = 0.1
height = 1.0

[sub_resource type="Animation" id="Animation_gkxnb"]
resource_name = "HammerHit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Forge/Hammer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Forge/Hammer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.73551, 1.12125, 0.238657), Vector3(1.73551, 1.12125, 0.238657)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Forge/Hammer:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1.86606),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.69328, 0, 0)]
}

[sub_resource type="Animation" id="Animation_r2ahu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.081609, 1.53411, -0.177784)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.50091, -0.750491, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Forge/Hammer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Forge/Hammer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.73551, 1.12125, 0.238657)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Forge/Hammer:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0tfyo"]
resource_name = "to_anvil"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.081609, 1.53411, -0.177784), Vector3(0.838451, 1.55599, 0.362422)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.50091, -0.750491, 0), Vector3(-0.713239, -0.670413, 0.0795823)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81j1f"]
_data = {
"HammerHit": SubResource("Animation_gkxnb"),
"RESET": SubResource("Animation_r2ahu"),
"to_anvil": SubResource("Animation_0tfyo")
}

[node name="TestForge" type="Node3D"]
script = ExtResource("1_kefk8")

[node name="StateChartHandler" type="Node" parent="."]
script = ExtResource("8_jiarc")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_2w87d")

[node name="State" type="Node" parent="StateChart"]
script = ExtResource("5_yfkln")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/State"]
script = ExtResource("6_slgsw")

[node name="OnDrag" type="Node" parent="StateChart/State/Idle"]
script = ExtResource("7_lb24i")
to = NodePath("../../Dragging")
event = &"grabbed"

[node name="OnStartForging" type="Node" parent="StateChart/State/Idle"]
script = ExtResource("7_lb24i")
to = NodePath("../../ForgingCompound")
event = &"start_forging"

[node name="OnStartDistribution" type="Node" parent="StateChart/State/Idle"]
script = ExtResource("7_lb24i")
to = NodePath("../../Distribution")
event = &"start_distribution"

[node name="Dragging" type="Node" parent="StateChart/State"]
script = ExtResource("6_slgsw")

[node name="StopDrag" type="Node" parent="StateChart/State/Dragging"]
script = ExtResource("7_lb24i")
to = NodePath("../../Idle")
event = &"released"

[node name="ForgingCompound" type="Node" parent="StateChart/State"]
script = ExtResource("5_yfkln")
initial_state = NodePath("WaitHit")

[node name="WaitHit" type="Node" parent="StateChart/State/ForgingCompound"]
script = ExtResource("6_slgsw")

[node name="OnForged" type="Node" parent="StateChart/State/ForgingCompound/WaitHit"]
script = ExtResource("7_lb24i")
to = NodePath("../../Particles")
event = &"forged"

[node name="OnHit" type="Node" parent="StateChart/State/ForgingCompound/WaitHit"]
script = ExtResource("7_lb24i")
to = NodePath("../../HammerHit")
event = &"hammer_hit"

[node name="HammerHit" type="Node" parent="StateChart/State/ForgingCompound"]
script = ExtResource("6_xcldi")
animation_player = NodePath("../../../../AnimationPlayer")

[node name="Transition" type="Node" parent="StateChart/State/ForgingCompound/HammerHit"]
script = ExtResource("7_lb24i")
to = NodePath("../../WaitHit")
delay_seconds = 0.5

[node name="OnForged" type="Node" parent="StateChart/State/ForgingCompound/HammerHit"]
script = ExtResource("7_lb24i")
to = NodePath("../../Particles")
event = &"forged"

[node name="Particles" type="Node" parent="StateChart/State/ForgingCompound"]
script = ExtResource("6_slgsw")

[node name="Transition" type="Node" parent="StateChart/State/ForgingCompound/Particles"]
script = ExtResource("7_lb24i")
to = NodePath("../../../Idle")
delay_seconds = 1.2

[node name="Distribution" type="Node" parent="StateChart/State"]
script = ExtResource("6_slgsw")

[node name="OnEnd" type="Node" parent="StateChart/State/Distribution"]
script = ExtResource("7_lb24i")
to = NodePath("../../Idle")
event = &"end_distribution"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.731354, 0.327512, -0.598212, 0, 0.877146, 0.480224, 0.681998, -0.351214, 0.641504, 0.081609, 1.53411, -0.177784)

[node name="Forge" type="Node3D" parent="."]

[node name="WallsFloor" type="Node3D" parent="Forge"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Forge/WallsFloor"]
transform = Transform3D(2.45181, 0, 0, 0, 1, 0, 0, 0, 2.48876, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_cj68h")
mesh = SubResource("PlaneMesh_jkj0f")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Forge/WallsFloor"]
transform = Transform3D(1.07172e-07, -1, 2.17574e-07, -2.45181, -4.37114e-08, 0, 9.36928e-15, -8.74228e-08, -2.48875, 2.31964, 0, 0)
material_override = SubResource("StandardMaterial3D_cj68h")
mesh = SubResource("PlaneMesh_jkj0f")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Forge/WallsFloor"]
transform = Transform3D(-1.07172e-07, 1, 0, -2.45181, -4.37114e-08, 1.05403e-21, 2.5411e-21, 0, 2.48875, -2.44469, 0, 0)
material_override = SubResource("StandardMaterial3D_cj68h")
mesh = SubResource("PlaneMesh_jkj0f")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Forge/WallsFloor"]
transform = Transform3D(-4.02594e-15, -4.37114e-08, -2.48875, -2.45181, -4.37114e-08, 1.05403e-21, -1.07172e-07, 1, -1.08787e-07, 0.0388434, 0, -2.44791)
material_override = SubResource("StandardMaterial3D_cj68h")
mesh = SubResource("PlaneMesh_jkj0f")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Forge/WallsFloor"]
transform = Transform3D(-5.34334e-15, 1.31134e-07, 2.48875, -2.45181, -4.37114e-08, 1.58104e-21, 1.07172e-07, -1, 3.26361e-07, 0.0388434, 0, 2.3899)
material_override = SubResource("StandardMaterial3D_cj68h")
mesh = SubResource("PlaneMesh_jkj0f")
skeleton = NodePath("../..")

[node name="Table" parent="Forge" instance=ExtResource("8_dknt7")]
transform = Transform3D(0.438984, 0, 0.545246, 0, 0.7, 0, -0.545246, 0, 0.438984, -1.41147, 0.44669, 0.31739)

[node name="Anvil" parent="Forge" instance=ExtResource("2_2clwy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73308, 0.537726, -0.419029)

[node name="Waterpot" parent="Forge" instance=ExtResource("8_122nu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.341069, 0.327101, -1.82028)

[node name="Furnace" parent="Forge" instance=ExtResource("9_2fqu1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.594, 0.624108, -1.87953)

[node name="Hammer" type="Node3D" parent="Forge"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73551, 1.12125, 0.238657)

[node name="Mesh" type="MeshInstance3D" parent="Forge/Hammer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.455778, 0)
mesh = SubResource("CapsuleMesh_bc0ho")
skeleton = NodePath("../../..")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0.12941, -0.224144, 0, 0.866025, 0.5, 0.258819, -0.482963, 0.836516, 0, 0, 0)
light_color = Color(0.831373, 0.831373, 0.831373, 1)
sky_mode = 1

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.41822, 4.63823, 0.18123)
light_energy = 10.0

[node name="EquipmentDistribution" parent="." instance=ExtResource("2_6xpmr")]
visible = false

[node name="ItemNode" parent="." instance=ExtResource("9_ld4ro")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.07974, 1.25908, -1.16589)
item = ExtResource("12_4tboe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_81j1f")
}

[connection signal="state_entered" from="StateChart/State/Idle" to="StateChartHandler" method="_on_idle_state_entered"]
[connection signal="state_unhandled_input" from="StateChart/State/Idle" to="StateChartHandler" method="_on_idle_state_unhandled_input"]
[connection signal="state_entered" from="StateChart/State/Dragging" to="StateChartHandler" method="_on_dragging_state_entered"]
[connection signal="state_processing" from="StateChart/State/Dragging" to="StateChartHandler" method="_on_dragging_state_processing"]
[connection signal="state_unhandled_input" from="StateChart/State/Dragging" to="StateChartHandler" method="_on_dragging_state_unhandled_input"]
[connection signal="state_entered" from="StateChart/State/ForgingCompound" to="StateChartHandler" method="_on_forging_compound_state_entered"]
[connection signal="state_entered" from="StateChart/State/ForgingCompound/WaitHit" to="StateChartHandler" method="_on_waiting_hit_state_entered"]
[connection signal="state_unhandled_input" from="StateChart/State/ForgingCompound/WaitHit" to="StateChartHandler" method="_on_wait_hit_state_unhandled_input"]
[connection signal="state_entered" from="StateChart/State/ForgingCompound/HammerHit" to="StateChartHandler" method="_on_hammer_hit_state_entered"]
[connection signal="state_entered" from="StateChart/State/Distribution" to="StateChartHandler" method="_on_distribution_state_entered"]
[connection signal="state_unhandled_input" from="StateChart/State/Distribution" to="StateChartHandler" method="_on_distribution_state_unhandled_input"]
